--- a/app.yaml
+++ b/app.yaml
@@ -4,21 +4,14 @@ entrypoint: gunicorn -b :$PORT main:app
 
 runtime_config:
   python_version: 3
-    
+
+vpc_access_connector:
+ name: "projects/solid-space-326918/locations/us-east1/connectors/serverless-connector1"
+
 beta_settings:
-  cloud_sql_instances: solid-space-326918:us-east1:baseball-pitchers
+  cloud_sql_instances: solid-space-326918:us-east1:baseball-pitchers-ipinternal=tcp
 
-# Remember - storing secrets in plaintext is potentially unsafe. Consider using
-# something like https://cloud.google.com/secret-manager/docs/overview to help keep
-# secrets secret.
-env_variables:
-  CLOUD_SQL_CONNECTION_NAME: solid-space-326918:us-east1:baseball-pitchers
-  DB_USER: postgres
-  DB_PASS: 123456
-  DB_NAME: baseball_pitchers
 
-  # TCP connection setup; remove if using a Unix domain socket instead
-  DB_HOST: 172.17.0.1:5433  
 
 manual_scaling:
   instances: 1
