--- a/app.yaml
+++ b/app.yaml
@@ -9,7 +9,7 @@ vpc_access_connector:
  name: "projects/solid-space-326918/locations/us-east1/connectors/serverless-connector1"
 
 beta_settings:
-  cloud_sql_instances: solid-space-326918:us-east1:baseball-pitchers-ipinternal=tcp
+  cloud_sql_instances: solid-space-326918:us-east1:baseball-pitchers-ipinternal=tcp:5433,solid-space-326918:us-east1:baseball-pitchers-external
 
 
 
