--- a/app.yaml
+++ b/app.yaml
@@ -5,11 +5,9 @@ entrypoint: gunicorn -b :$PORT main:app
 runtime_config:
   python_version: 3
 
-vpc_access_connector:
- name: "projects/solid-space-326918/locations/us-east1/connectors/serverless-connector1"
 
 beta_settings:
-  cloud_sql_instances: solid-space-326918:us-east1:baseball-pitchers-ipinternal=tcp:5432,solid-space-326918:us-east1:baseball-pitchers-external
+  cloud_sql_instances: solid-space-326918:us-east1:baseball-pitchers-127.0.0.1=tcp:3306
 
 
 
