--- a/app.yaml
+++ b/app.yaml
@@ -5,11 +5,11 @@ entrypoint: gunicorn -b :$PORT main:app
 runtime_config:
   python_version: 3
 
+service_account: servicetest@solid-space-326918.iam.gserviceaccount.com
 
 beta_settings:
   cloud_sql_instances: solid-space-326918:us-east1:baseball-pitchers-ipinternal=tcp:3306
-
-
+    
 
 manual_scaling:
   instances: 1
