--- a/app.yaml
+++ b/app.yaml
@@ -5,11 +5,20 @@ entrypoint: gunicorn -b :$PORT main:app
 runtime_config:
   python_version: 3
 
-service_account: servicetest@solid-space-326918.iam.gserviceaccount.com
+service_account:  test-328103@appspot.gserviceaccount.com
  
 beta_settings:
-  cloud_sql_instances: solid-space-326918:us-east1:baseball-pitchers=tcp:5432
-  
+  cloud_sql_instances: test-328103:us-east1:baseball=tcp:5431
+ 
+ 
+env_variables:
+  CLOUD_SQL_CONNECTION_NAME: test-328103:us-east1:baseball
+  DB_USER: test
+  DB_PASS: 123456
+  DB_NAME: baseballpitchers
+
+  # TCP connection setup; remove if using a Unix domain socket instead
+  DB_HOST: 172.17.0.1:5431
 
 manual_scaling:
   instances: 1
