--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,25 @@
-certifi
-charset-normalizer
-click
+alembic==1.7.4
 cloud-sql-python-connector==0.1.0
-colorama
-dictalchemy
-Flask
-Flask-Migrate
-Flask-SQLAlchemy
-greenlet
-gunicorn==19.3.0
-idna
-itsdangerous
-Jinja2
-Mako
-MarkupSafe
-numpy
-pandas
-psycopg2
-psycopg2-binary
-PyJWT
-python-dateutil
-pytz
-requests
-six
-SQLAlchemy==0.7.8
-twilio
-urllib3
-Werkzeug
+click==8.0.1
+Flask==2.0.2
+Flask-Migrate==3.1.0
+Flask-SQLAlchemy==2.5.1
+greenlet==1.1.2
+importlib-metadata==4.8.1
+importlib-resources==5.2.2
+itsdangerous==2.0.1
+Jinja2==3.0.2
+Mako==1.1.5
+MarkupSafe==2.0.1
+numpy==1.21.2
+pandas==1.3.3
+psycopg2==2.9.1
+python-dateutil==2.8.2
+pytz==2021.3
+six==1.16.0
+SQLAlchemy==1.4.25
+typing-extensions==3.10.0.2
+Werkzeug==2.0.2
+zipp==3.6.0
+
+
