--- a/app.yaml
+++ b/app.yaml
@@ -15,7 +15,7 @@ env_variables:
   DB_USER: 'test'
   DB_PASS: '123456'
   DB_NAME: 'baseballpitchers'
-  DB_HOST: '/cloudsql/test-328103:us-east1:baseball'
+  DB_HOST: '172.17.0.1:5432'
 
 
 manual_scaling:
