--- a/app.yaml
+++ b/app.yaml
@@ -5,7 +5,7 @@ entrypoint: gunicorn -b :$PORT main:app
 runtime_config:
   python_version: 3
 
-service_account:  test-328103@appspot.gserviceaccount.com
+service_account:  connect@test-328103.iam.gserviceaccount.com
  
 beta_settings:
   cloud_sql_instances: test-328103:us-east1:baseball
