--- a/app.yaml
+++ b/app.yaml
@@ -12,10 +12,10 @@ beta_settings:
  
  
 env_variables:
-  DB_USER: 'test'
-  DB_PASS: '123456'
+  DB_USER: 
+  DB_PASS: 
   DB_NAME: 'baseballpitchers'
-  DB_HOST: '172.17.0.1:5432'
+  DB_HOST: ':5432'
 
 
 manual_scaling:
