--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,58 @@
+aiohttp==3.7.4.post0
 alembic==1.7.4
-cloud-sql-python-connector==0.1.0
+asn1crypto==1.4.0
+async-timeout==3.0.1
+attrs==21.2.0
+cachetools==4.2.4
+certifi==2021.10.8
+cffi==1.14.6
+chardet==4.0.0
+charset-normalizer==2.0.6
 click==8.0.1
+cloud-sql-python-connector==0.1.0
+cryptography==35.0.0
 Flask==2.0.2
 Flask-Migrate==3.1.0
 Flask-SQLAlchemy==2.5.1
+google-api-core==2.1.0
+google-api-python-client==2.24.0
+google-auth==2.3.0
+google-auth-httplib2==0.1.0
+googleapis-common-protos==1.53.0
 greenlet==1.1.2
+httplib2==0.20.1
+idna==3.2
 importlib-metadata==4.8.1
 importlib-resources==5.2.2
 itsdangerous==2.0.1
 Jinja2==3.0.2
 Mako==1.1.5
 MarkupSafe==2.0.1
+multidict==5.2.0
 numpy==1.21.2
-oauthlib
+oauthlib==3.1.1
 pandas==1.3.3
+pg8000==1.21.2
+protobuf==3.18.1
 psycopg2==2.9.1
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycparser==2.20
+pyOpenSSL==21.0.0
+pyparsing==2.4.7
 python-dateutil==2.8.2
+python-dotenv==0.19.0
 pytz==2021.3
+requests==2.26.0
+rsa==4.7.2
+scramp==1.4.1
 six==1.16.0
 SQLAlchemy==1.4.25
 typing-extensions==3.10.0.2
+uritemplate==3.0.1
+urllib3==1.26.7
 Werkzeug==2.0.2
+yarl==1.7.0
 zipp==3.6.0
 
 
