--- a/requirements.txt
+++ b/requirements.txt
@@ -1,58 +1,132 @@
-aiohttp==3.7.4.post0
-alembic==1.7.4
-asn1crypto==1.4.0
-async-timeout==3.0.1
-attrs==21.2.0
-cachetools==4.2.4
-certifi==2021.10.8
-cffi==1.14.6
+absl-py==0.14.1
+alembic==1.6.5
+applicationinsights==0.11.10
+astor==0.8.1
+astroid==1.6.6
+autopep8==1.5.7
+backports.csv==1.0.7
+backports.entry-points-selectable==1.1.0
+backports.functools-lru-cache==1.6.4
+backports.shutil-get-terminal-size==1.0.0
+backports.weakref==1.0.post1
+cachetools==3.1.1
+certifi==2021.5.30
 chardet==4.0.0
-charset-normalizer==2.0.6
-click==8.0.1
-cloud-sql-python-connector==0.1.0
-cryptography==35.0.0
-Flask==2.0.2
-Flask-Migrate==3.1.0
+cli-helpers==0.2.3
+Click==7.0
+configobj==5.0.6
+configparser==4.0.2
+contextlib2==0.6.0.post1
+crcmod==1.7
+decorator==4.4.2
+distlib==0.3.3
+enum34==1.1.10
+filelock==3.2.1
+Flask==1.1.4
+Flask-Migrate==3.0.1
 Flask-SQLAlchemy==2.5.1
-google-api-core==2.1.0
-google-api-python-client==2.24.0
-google-auth==2.3.0
+funcsigs==1.0.2
+future==0.18.2
+futures==3.3.0
+gast==0.5.2
+google-api-core==1.31.3
+google-api-python-client==1.12.8
+google-auth==1.35.0
 google-auth-httplib2==0.1.0
-googleapis-common-protos==1.53.0
-greenlet==1.1.2
-httplib2==0.20.1
-idna==3.2
-importlib-metadata==4.8.1
-importlib-resources==5.2.2
-itsdangerous==2.0.1
-Jinja2==3.0.2
+google-cloud-bigquery==1.28.0
+google-cloud-core==1.7.2
+google-cloud-datastore==1.15.3
+google-cloud-language==1.3.0
+google-cloud-logging==1.15.1
+google-cloud-spanner==1.19.1
+google-cloud-storage==1.42.3
+google-cloud-translate==2.0.2
+google-cloud-videointelligence==1.16.1
+google-cloud-vision==1.0.0
+google-pasta==0.2.0
+google-resumable-media==1.3.3
+googleapis-common-protos==1.52.0
+grpc-google-iam-v1==0.12.3
+grpcio==1.41.0
+gunicorn==19.10.0
+h5py==2.10.0
+httplib2==0.19.1
+humanize==1.0.0
+idna==2.10
+importlib-metadata==2.1.1
+importlib-resources==3.3.1
+ipaddr==2.2.0
+ipython==5.1.0
+ipython-genutils==0.2.0
+isort==4.3.21
+itsdangerous==1.1.0
+jedi==0.17.2
+Jinja2==2.11.3
+Keras-Applications==1.0.8
+Keras-Preprocessing==1.1.2
+lazy-object-proxy==1.6.0
 Mako==1.1.5
-MarkupSafe==2.0.1
-multidict==5.2.0
-numpy==1.21.2
-oauthlib==3.1.1
-pandas==1.3.3
-pg8000==1.21.2
-protobuf==3.18.1
-psycopg2==2.9.1
+Markdown==3.1.1
+MarkupSafe==1.1.1
+mccabe==0.6.1
+meld3==1.0.2
+mercurial==4.8.2
+mock==3.0.5
+mssql-cli==1.0.0
+numpy==1.16.6
+oauth2==1.9.0.post1
+oauth2client==4.1.3
+packaging==20.9
+pandas==0.24.2
+parso==0.7.1
+pathlib2==2.3.6
+pexpect==4.8.0
+pg8000==1.12.5
+pickleshare==0.7.5
+platformdirs==2.0.2
+pluggy==0.13.1
+prompt-toolkit==2.0.10
+protobuf==3.17.3
+ptyprocess==0.7.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
-pycparser==2.20
-pyOpenSSL==21.0.0
+pycodestyle==2.7.0
+pydocstyle==3.0.0
+pyflakes==2.3.1
+Pygments==2.5.2
+pylint==1.9.5
 pyparsing==2.4.7
 python-dateutil==2.8.2
-python-dotenv==0.19.0
+python-dotenv==0.18.0
+python-editor==1.0.4
+python-jsonrpc-server==0.4.0
+python-language-server==0.34.1
 pytz==2021.3
 requests==2.26.0
-rsa==4.7.2
-scramp==1.4.1
+rope==0.20.1
+rsa==4.5
+scandir==1.10.0
+simplegeneric==0.8.1
+singledispatch==3.7.0
 six==1.16.0
+snowballstemmer==2.1.0
 SQLAlchemy==1.4.25
-typing-extensions==3.10.0.2
+sqlparse==0.2.4
+supervisor==3.3.5
+tensorboard==1.14.0
+tensorflow==1.14.0
+tensorflow-estimator==1.14.0
+termcolor==1.1.0
+terminaltables==3.1.0
+toml==0.10.2
+traitlets==4.3.3
+typing==3.10.0.0
+ujson==1.35
 uritemplate==3.0.1
 urllib3==1.26.7
-Werkzeug==2.0.2
-yarl==1.7.0
-zipp==3.6.0
-
-
+virtualenv==20.8.1
+wcwidth==0.2.5
+Werkzeug==1.0.1
+wrapt==1.13.1
+yapf==0.31.0
+zipp==1.2.0
