--- a/app.yaml
+++ b/app.yaml
@@ -1,12 +1,26 @@
-runtime: python37
+runtime: python
+env: flex
+entrypoint: gunicorn -b :$PORT main:app
 
--url: /.*
-  script:auto
+runtime_config:
+  python_version: 3
+
+
+beta_settings:
+  cloud_sql_instances: 'test-328103:us-east1:baseball'
 
 env_variables:
-  DB_USER=user1
-  DB_PASS=123456
-  DB_NAME=baseballpitchers
-  DB_SOCKET_DIR="/cloudsql"
-  CLOUD_SQL_CONNECTION_NAME='test-328103:us-east1:baseball'
-  SQLALCHEMY_DATABASE_URI="postgresql+psycopg2://user1:123456@127.0.0.1:5432/baseballpitchers?host=/cloudsql/test-328103:us-east1:baseball"
+  DB_USER: 'user1'
+  DB_PASS: '123456'
+  DB_NAME: 'baseballpitchers'
+  DB_SOCKET_DIR: '/cloudsql'
+  CLOUD_SQL_CONNECTION_NAME: 'test-328103:us-east1:baseball'
+  SQLALCHEMY_DATABASE_URI: 'postgresql+psycopg2://user1:123456@127.0.0.1:5432/baseballpitchers?host=/cloudsql/test-328103:us-east1:baseball'
+  
+
+manual_scaling:
+  instances: 1
+resources:
+  cpu: 1
+  memory_gb: 0.5
+  disk_size_gb: 10
