--- a/app.yaml
+++ b/app.yaml
@@ -1,3 +1,5 @@
+## ESTABLISHES THE RUNTIME CONFIGURATION, FLEX ENVIRONMENT RUNNING ON GUNICORN WEB SERVER
+
 runtime: python
 env: flex
 entrypoint: gunicorn -b :$PORT main:app
@@ -5,9 +7,12 @@ entrypoint: gunicorn -b :$PORT main:app
 runtime_config:
   python_version: 3
 
+## ADDS CLOUD SQL INSTANCE TO OVERALL CONFIGURATION (THIS SETTING IS BETA)
 
 beta_settings:
   cloud_sql_instances: 'test-328103:us-east1:baseball'
+
+## ADDS ENVIRONMENT VARIABLES FOR APP
 
 env_variables:
   DB_USER: 'user1'
@@ -17,6 +22,7 @@ env_variables:
   CLOUD_SQL_CONNECTION_NAME: 'test-328103:us-east1:baseball'
   SQLALCHEMY_DATABASE_URI: 'postgresql+psycopg2://user1:123456@127.0.0.1:5432/baseballpitchers?host=/cloudsql/test-328103:us-east1:baseball'
   
+## RESOUCRCE LIMITS FOR THE APP
 
 manual_scaling:
   instances: 1
